[gd_scene load_steps=27 format=2]

[ext_resource path="res://maps/chapter4/tilemap_snowy_lands.tres" type="TileSet" id=1]
[ext_resource path="res://entities/entity_mc/entity_mc.tscn" type="PackedScene" id=2]
[ext_resource path="res://areas/area_change_map.tscn" type="PackedScene" id=3]
[ext_resource path="res://tileset/scripts/set_camera_limit.gd" type="Script" id=4]
[ext_resource path="res://maps/chapter5/obj_door.gd" type="Script" id=5]
[ext_resource path="res://tileset/feeling_dungeon.png" type="Texture" id=6]
[ext_resource path="res://sprites/spr_darkbeing/spr_darkbeing5.png" type="Texture" id=7]
[ext_resource path="res://sprites/spr_darkbeing/spr_darkbeing8.png" type="Texture" id=8]
[ext_resource path="res://sprites/spr_darkbeing/spr_darkbeing6.png" type="Texture" id=9]
[ext_resource path="res://sprites/spr_darkbeing/spr_darkbeing7.png" type="Texture" id=10]
[ext_resource path="res://maps/chapter5/chapter5-wrath.gd" type="Script" id=11]
[ext_resource path="res://sprites/spr_darkbeing/spr_darkbeing1.png" type="Texture" id=12]
[ext_resource path="res://sprites/spr_darkbeing/spr_darkbeing2.png" type="Texture" id=13]
[ext_resource path="res://sprites/spr_darkbeing/spr_darkbeing4.png" type="Texture" id=14]
[ext_resource path="res://sprites/spr_darkbeing/spr_darkbeing3.png" type="Texture" id=15]
[ext_resource path="res://entities/boss_attacks/node_boss_attacks.tscn" type="PackedScene" id=16]
[ext_resource path="res://maps/chapter5/darkness.gd" type="Script" id=17]
[ext_resource path="res://maps/chapter5/aberration_anim.tscn" type="PackedScene" id=18]
[ext_resource path="res://dialogue/dialogue_system.tscn" type="PackedScene" id=19]
[ext_resource path="res://dialogue/dialogue_holder.tscn" type="PackedScene" id=20]
[ext_resource path="res://sprites/spr_mc/spr_darkmc_shadow.png" type="Texture" id=21]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=2]
radius = 24.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 8 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.0
height = 12.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 13 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 8 ) ],
"loop": false,
"name": "tp",
"speed": 12.0
} ]

[node name="chapter5-depression" type="Node2D"]
script = ExtResource( 11 )

[node name="dialogue_system" parent="." instance=ExtResource( 19 )]
boss = "darkness"

[node name="0" parent="dialogue_system" instance=ExtResource( 20 )]
dialogue_lines = [ [ "Kamu tidak bisa menolong dirimu sendiri", "Bagaimana kamu bisa menolong orang lain?" ], [ "You can't even help yourself", "What makes you think you can help the others" ] ]
dialogue_picture_resource = [ ExtResource( 21 ), null ]
dialogue_command = "enable_boss"

[node name="aberration_anim" parent="." instance=ExtResource( 18 )]

[node name="tilemap_snowy_lands" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1310733, 15, 65537, -1310732, 15, 65537, -1310731, 15, 65537, -1310730, 15, 65537, -1310729, 10, 0, -1310728, 7, 131073, -1310727, 7, 131073, -1310726, 7, 131073, -1310725, 7, 131073, -1310724, 7, 131073, -1310723, 7, 131073, -1310722, 7, 131073, -1310721, 16, 65536, -1376256, 16, 65538, -1376255, 7, 131073, -1376254, 7, 131073, -1376253, 7, 131073, -1376252, 7, 131073, -1376251, 7, 131073, -1376250, 7, 131073, -1376249, 7, 131073, -1376248, 10, 1, -1376247, 15, 65537, -1376246, 15, 65537, -1376245, 15, 65537, -1376244, 15, 65537, -1245197, 15, 65537, -1245196, 15, 65537, -1245195, 15, 65537, -1245194, 15, 65537, -1245193, 7, 65538, -1245192, 9, 0, -1245191, 9, 0, -1245190, 9, 0, -1245189, 9, 0, -1245188, 9, 0, -1245187, 9, 0, -1245186, 9, 0, -1245185, 16, 65536, -1310720, 18, 65538, -1310719, 9, 0, -1310718, 9, 0, -1310717, 9, 0, -1310716, 9, 0, -1310715, 9, 0, -1310714, 9, 0, -1310713, 9, 0, -1310712, 7, 65536, -1310711, 15, 65537, -1310710, 15, 65537, -1310709, 15, 65537, -1310708, 15, 65537, -1179661, 15, 65537, -1179660, 15, 65537, -1179659, 15, 65537, -1179658, 15, 65537, -1179657, 7, 65538, -1179649, 16, 65536, -1245184, 16, 65538, -1245176, 7, 65536, -1245175, 15, 65537, -1245174, 15, 65537, -1245173, 15, 65537, -1245172, 15, 65537, -1114125, 15, 65537, -1114124, 15, 65537, -1114123, 15, 65537, -1114122, 15, 65537, -1114121, 7, 65538, -1114120, 15, 0, -1114119, 15, 1, -1114118, 15, 1, -1114117, 15, 1, -1114116, 15, 1, -1114115, 15, 1, -1114114, 15, 1, -1114113, 16, 65536, -1179648, 16, 65538, -1179647, 15, 1, -1179646, 15, 1, -1179645, 15, 1, -1179644, 15, 1, -1179643, 15, 1, -1179642, 15, 1, -1179641, 15, 2, -1179640, 7, 65536, -1179639, 15, 65537, -1179638, 15, 65537, -1179637, 15, 65537, -1179636, 15, 65537, -1048589, 15, 65537, -1048588, 15, 65537, -1048587, 15, 65537, -1048586, 15, 65537, -1048585, 7, 65538, -1048584, 15, 65536, -1048583, 15, 65537, -1048582, 15, 65537, -1048581, 15, 65537, -1048580, 15, 65537, -1048579, 15, 65537, -1048578, 15, 65537, -1048577, 17, 0, -1114112, 16, 65538, -1114111, 15, 65537, -1114110, 15, 65537, -1114109, 15, 65537, -1114108, 15, 65537, -1114107, 15, 65537, -1114106, 15, 65537, -1114105, 15, 65538, -1114104, 7, 65536, -1114103, 15, 65537, -1114102, 15, 65537, -1114101, 15, 65537, -1114100, 15, 65537, -983053, 15, 65537, -983052, 15, 65537, -983051, 15, 65537, -983050, 15, 65537, -983049, 7, 65538, -983048, 15, 65536, -983047, 15, 65537, -983046, 15, 65537, -983045, 15, 65537, -983044, 15, 65537, -983043, 15, 65537, -983042, 15, 65537, -983041, 17, 0, -1048576, 18, 65538, -1048575, 15, 65537, -1048574, 15, 65537, -1048573, 15, 65537, -1048572, 15, 65537, -1048571, 15, 65537, -1048570, 15, 65537, -1048569, 15, 65538, -1048568, 7, 65536, -1048567, 15, 65537, -1048566, 15, 65537, -1048565, 15, 65537, -1048564, 15, 65537, -917517, 15, 65537, -917516, 15, 65537, -917515, 15, 65537, -917514, 15, 65537, -917513, 7, 65538, -917512, 15, 65536, -917511, 15, 65537, -917510, 15, 65537, -917509, 15, 65537, -917508, 15, 65537, -917507, 15, 65537, -917506, 15, 65537, -917505, 18, 65536, -983040, 18, 131074, -983039, 15, 65537, -983038, 15, 65537, -983037, 15, 65537, -983036, 15, 65537, -983035, 15, 65537, -983034, 15, 65537, -983033, 15, 65538, -983032, 7, 65536, -983031, 15, 65537, -983030, 15, 65537, -983029, 15, 65537, -983028, 15, 65537, -851981, 15, 65537, -851980, 15, 65537, -851979, 15, 65537, -851978, 15, 65537, -851977, 7, 65538, -851976, 15, 65536, -851975, 15, 65537, -851974, 15, 65537, -851973, 15, 65537, -851972, 15, 65537, -851971, 15, 65537, -851970, 15, 65537, -851969, 18, 131072, -917504, 18, 131074, -917503, 15, 65537, -917502, 15, 65537, -917501, 15, 65537, -917500, 15, 65537, -917499, 15, 65537, -917498, 15, 65537, -917497, 15, 65538, -917496, 7, 65536, -917495, 15, 65537, -917494, 15, 65537, -917493, 15, 65537, -917492, 15, 65537, -786445, 15, 65537, -786444, 15, 65537, -786443, 15, 65537, -786442, 15, 65537, -786441, 7, 65538, -786440, 15, 65536, -786439, 15, 65537, -786438, 15, 65537, -786437, 15, 65537, -786436, 15, 65537, -786435, 15, 65537, -786434, 15, 65537, -786433, 18, 131072, -851968, 18, 131074, -851967, 15, 65537, -851966, 15, 65537, -851965, 15, 65537, -851964, 15, 65537, -851963, 15, 65537, -851962, 15, 65537, -851961, 15, 65538, -851960, 7, 65536, -851959, 15, 65537, -851958, 15, 65537, -851957, 15, 65537, -851956, 15, 65537, -720909, 15, 65537, -720908, 15, 65537, -720907, 15, 65537, -720906, 15, 65537, -720905, 7, 65538, -720904, 15, 65536, -720903, 15, 65537, -720902, 15, 65537, -720901, 15, 65537, -720900, 15, 65537, -720899, 15, 65537, -720898, 15, 65537, -720897, 18, 131072, -786432, 18, 131074, -786431, 15, 65537, -786430, 15, 65537, -786429, 15, 65537, -786428, 15, 65537, -786427, 15, 65537, -786426, 15, 65537, -786425, 15, 65538, -786424, 7, 65536, -786423, 15, 65537, -786422, 15, 65537, -786421, 15, 65537, -786420, 15, 65537, -655373, 15, 65537, -655372, 15, 65537, -655371, 15, 65537, -655370, 15, 65537, -655369, 7, 65538, -655368, 15, 65536, -655367, 15, 65537, -655366, 15, 65537, -655365, 15, 65537, -655364, 15, 65537, -655363, 15, 65537, -655362, 15, 65537, -655361, 18, 131072, -720896, 18, 131074, -720895, 15, 65537, -720894, 15, 65537, -720893, 15, 65537, -720892, 15, 65537, -720891, 15, 65537, -720890, 15, 65537, -720889, 15, 65538, -720888, 7, 65536, -720887, 15, 65537, -720886, 15, 65537, -720885, 15, 65537, -720884, 15, 65537, -589837, 15, 65537, -589836, 15, 65537, -589835, 15, 65537, -589834, 15, 65537, -589833, 7, 65538, -589832, 15, 65536, -589831, 15, 65537, -589830, 15, 65537, -589829, 15, 65537, -589828, 15, 65537, -589827, 15, 65537, -589826, 15, 65537, -589825, 18, 65536, -655360, 18, 131074, -655359, 15, 65537, -655358, 15, 65537, -655357, 15, 65537, -655356, 15, 65537, -655355, 15, 65537, -655354, 15, 65537, -655353, 15, 65538, -655352, 7, 65536, -655351, 15, 65537, -655350, 15, 65537, -655349, 15, 65537, -655348, 15, 65537, -524301, 15, 65537, -524300, 15, 65537, -524299, 15, 65537, -524298, 15, 65537, -524297, 7, 65538, -524296, 15, 65536, -524295, 15, 65537, -524294, 15, 65537, -524293, 15, 65537, -524292, 15, 65537, -524291, 15, 65537, -524290, 15, 65537, -524289, 18, 65536, -589824, 18, 131074, -589823, 15, 65537, -589822, 15, 65537, -589821, 15, 65537, -589820, 15, 65537, -589819, 15, 65537, -589818, 15, 65537, -589817, 15, 65538, -589816, 7, 65536, -589815, 15, 65537, -589814, 15, 65537, -589813, 15, 65537, -589812, 15, 65537, -458765, 15, 65537, -458764, 15, 65537, -458763, 15, 65537, -458762, 15, 65537, -458761, 7, 65538, -458760, 15, 65536, -458759, 15, 65537, -458758, 15, 65537, -458757, 15, 65537, -458756, 15, 65537, -458755, 15, 65537, -458754, 15, 65537, -458753, 18, 65536, -524288, 18, 2, -524287, 15, 65537, -524286, 15, 65537, -524285, 15, 65537, -524284, 15, 65537, -524283, 15, 65537, -524282, 15, 65537, -524281, 15, 65538, -524280, 7, 65536, -524279, 15, 65537, -524278, 15, 65537, -524277, 15, 65537, -524276, 15, 65537, -393229, 15, 65537, -393228, 15, 65537, -393227, 15, 65537, -393226, 15, 65537, -393225, 7, 65538, -393224, 15, 65536, -393223, 15, 65537, -393222, 15, 65537, -393221, 15, 65537, -393220, 15, 65537, -393219, 15, 65537, -393218, 15, 65537, -393217, 18, 65536, -458752, 18, 2, -458751, 15, 65537, -458750, 15, 65537, -458749, 15, 65537, -458748, 15, 65537, -458747, 15, 65537, -458746, 15, 65537, -458745, 15, 65538, -458744, 7, 65536, -458743, 15, 65537, -458742, 15, 65537, -458741, 15, 65537, -458740, 15, 65537, -327693, 15, 65537, -327692, 15, 65537, -327691, 15, 65537, -327690, 15, 65537, -327689, 7, 65538, -327688, 15, 65536, -327687, 15, 65537, -327686, 15, 65537, -327685, 15, 65537, -327684, 15, 65537, -327683, 15, 65537, -327682, 15, 65537, -327681, 18, 65536, -393216, 18, 2, -393215, 15, 65537, -393214, 15, 65537, -393213, 15, 65537, -393212, 15, 65537, -393211, 15, 65537, -393210, 15, 65537, -393209, 15, 65538, -393208, 7, 65536, -393207, 15, 65537, -393206, 15, 65537, -393205, 15, 65537, -393204, 15, 65537, -262157, 15, 65537, -262156, 15, 65537, -262155, 15, 65537, -262154, 15, 65537, -262153, 7, 65538, -262152, 15, 65536, -262151, 15, 65537, -262150, 15, 65537, -262149, 15, 65537, -262148, 15, 65537, -262147, 15, 65537, -262146, 15, 65537, -262145, 18, 0, -327680, 18, 2, -327679, 15, 65537, -327678, 15, 65537, -327677, 15, 65537, -327676, 15, 65537, -327675, 15, 65537, -327674, 15, 65537, -327673, 15, 65538, -327672, 7, 65536, -327671, 15, 65537, -327670, 15, 65537, -327669, 15, 65537, -327668, 15, 65537, -196621, 15, 65537, -196620, 15, 65537, -196619, 15, 65537, -196618, 15, 65537, -196617, 7, 65538, -196616, 15, 65536, -196615, 15, 65537, -196614, 15, 65537, -196613, 15, 65537, -196612, 15, 65537, -196611, 15, 65537, -196610, 15, 65537, -196609, 18, 0, -262144, 18, 2, -262143, 15, 65537, -262142, 15, 65537, -262141, 15, 65537, -262140, 15, 65537, -262139, 15, 65537, -262138, 15, 65537, -262137, 15, 65538, -262136, 7, 65536, -262135, 15, 65537, -262134, 15, 65537, -262133, 15, 65537, -262132, 15, 65537, -131085, 15, 65537, -131084, 15, 65537, -131083, 15, 65537, -131082, 15, 65537, -131081, 7, 65538, -131080, 15, 65536, -131079, 15, 65537, -131078, 15, 65537, -131077, 15, 65537, -131076, 15, 65537, -131075, 15, 65537, -131074, 15, 65537, -131073, 18, 0, -196608, 18, 65538, -196607, 15, 65537, -196606, 15, 65537, -196605, 15, 65537, -196604, 15, 65537, -196603, 15, 65537, -196602, 15, 65537, -196601, 15, 65538, -196600, 7, 65536, -196599, 15, 65537, -196598, 15, 65537, -196597, 15, 65537, -196596, 15, 65537, -65549, 15, 65537, -65548, 15, 65537, -65547, 15, 65537, -65546, 15, 65537, -65545, 7, 65538, -65544, 15, 65536, -65543, 15, 65537, -65542, 15, 65537, -65541, 15, 65537, -65540, 15, 65537, -65539, 15, 65537, -65538, 15, 65537, -65537, 18, 0, -131072, 18, 65538, -131071, 15, 65537, -131070, 15, 65537, -131069, 15, 65537, -131068, 15, 65537, -131067, 15, 65537, -131066, 15, 65537, -131065, 15, 65538, -131064, 7, 65536, -131063, 15, 65537, -131062, 15, 65537, -131061, 15, 65537, -131060, 15, 65537, -13, 15, 65537, -12, 15, 65537, -11, 15, 65537, -10, 15, 65537, -9, 7, 65538, -8, 15, 65536, -7, 15, 65537, -6, 15, 65537, -5, 15, 65537, -4, 15, 65537, -3, 15, 65537, -2, 15, 65537, -1, 18, 0, -65536, 18, 65538, -65535, 15, 65537, -65534, 15, 65537, -65533, 15, 65537, -65532, 15, 65537, -65531, 15, 65537, -65530, 15, 65537, -65529, 15, 65538, -65528, 7, 65536, -65527, 15, 65537, -65526, 15, 65537, -65525, 15, 65537, -65524, 15, 65537, 65523, 15, 65537, 65524, 15, 65537, 65525, 15, 65537, 65526, 15, 65537, 65527, 7, 65538, 65528, 15, 65536, 65529, 15, 65537, 65530, 15, 65537, 65531, 15, 65537, 65532, 15, 65537, 65533, 15, 65537, 65534, 15, 65537, 65535, 18, 65536, 0, 18, 65538, 1, 15, 65537, 2, 15, 65537, 3, 15, 65537, 4, 15, 65537, 5, 15, 65537, 6, 15, 65537, 7, 15, 65538, 8, 7, 65536, 9, 15, 65537, 10, 15, 65537, 11, 15, 65537, 12, 15, 65537, 131059, 15, 65537, 131060, 15, 65537, 131061, 15, 65537, 131062, 15, 65537, 131063, 7, 65538, 131064, 15, 65536, 131065, 15, 65537, 131066, 15, 65537, 131067, 15, 65537, 131068, 15, 65537, 131069, 15, 65537, 131070, 15, 65537, 131071, 18, 65536, 65536, 18, 131074, 65537, 15, 65537, 65538, 15, 65537, 65539, 15, 65537, 65540, 15, 65537, 65541, 15, 65537, 65542, 15, 65537, 65543, 15, 65538, 65544, 7, 65536, 65545, 15, 65537, 65546, 15, 65537, 65547, 15, 65537, 65548, 15, 65537, 196595, 15, 65537, 196596, 15, 65537, 196597, 15, 65537, 196598, 15, 65537, 196599, 7, 65538, 196600, 15, 131072, 196601, 15, 131073, 196602, 15, 131073, 196603, 15, 131073, 196604, 15, 131073, 196605, 15, 131073, 196606, 15, 131073, 196607, 18, 65536, 131072, 18, 131074, 131073, 15, 131073, 131074, 15, 131073, 131075, 15, 131073, 131076, 15, 131073, 131077, 15, 131073, 131078, 15, 131073, 131079, 15, 131074, 131080, 7, 65536, 131081, 15, 65537, 131082, 15, 65537, 131083, 15, 65537, 131084, 15, 65537, 262131, 15, 65537, 262132, 15, 65537, 262133, 15, 65537, 262134, 15, 65537, 262135, 10, 65536, 262136, 7, 1, 262137, 7, 1, 262138, 7, 1, 262139, 7, 1, 262140, 7, 1, 262141, 7, 1, 262142, 7, 1, 262143, 7, 1, 196608, 7, 1, 196609, 7, 1, 196610, 7, 1, 196611, 7, 1, 196612, 7, 1, 196613, 7, 1, 196614, 7, 1, 196615, 7, 1, 196616, 10, 65537, 196617, 15, 65537, 196618, 15, 65537, 196619, 15, 65537, 196620, 15, 65537, 327667, 15, 65537, 327668, 15, 65537, 327669, 15, 65537, 327670, 15, 65537, 327671, 15, 65537, 327672, 15, 65537, 327673, 15, 65537, 327674, 15, 65537, 327675, 15, 65537, 327676, 15, 65537, 327677, 15, 65537, 327678, 15, 65537, 327679, 15, 65537, 262144, 15, 65537, 262145, 15, 65537, 262146, 15, 65537, 262147, 15, 65537, 262148, 15, 65537, 262149, 15, 65537, 262150, 15, 65537, 262151, 15, 65537, 262152, 15, 65537, 262153, 15, 65537, 262154, 15, 65537, 262155, 15, 65537, 262156, 15, 65537, 393203, 15, 65537, 393204, 15, 65537, 393205, 15, 65537, 393206, 15, 65537, 393207, 15, 65537, 393208, 15, 65537, 393209, 15, 65537, 393210, 15, 65537, 393211, 15, 65537, 393212, 15, 65537, 393213, 15, 65537, 393214, 15, 65537, 393215, 15, 65537, 327680, 15, 65537, 327681, 15, 65537, 327682, 15, 65537, 327683, 15, 65537, 327684, 15, 65537, 327685, 15, 65537, 327686, 15, 65537, 327687, 15, 65537, 327688, 15, 65537, 327689, 15, 65537, 327690, 15, 65537, 327691, 15, 65537, 327692, 15, 65537, 458739, 15, 65537, 458740, 15, 65537, 458741, 15, 65537, 458742, 15, 65537, 458743, 15, 65537, 458744, 15, 65537, 458745, 15, 65537, 458746, 15, 65537, 458747, 15, 65537, 458748, 15, 65537, 458749, 15, 65537, 458750, 15, 65537, 458751, 15, 65537, 393216, 15, 65537, 393217, 15, 65537, 393218, 15, 65537, 393219, 15, 65537, 393220, 15, 65537, 393221, 15, 65537, 393222, 15, 65537, 393223, 15, 65537, 393224, 15, 65537, 393225, 15, 65537, 393226, 15, 65537, 393227, 15, 65537, 393228, 15, 65537, 524275, 15, 65537, 524276, 15, 65537, 524277, 15, 65537, 524278, 15, 65537, 524279, 15, 65537, 524280, 15, 65537, 524281, 15, 65537, 524282, 15, 65537, 524283, 15, 65537, 524284, 15, 65537, 524285, 15, 65537, 524286, 15, 65537, 524287, 15, 65537, 458752, 15, 65537, 458753, 15, 65537, 458754, 15, 65537, 458755, 15, 65537, 458756, 15, 65537, 458757, 15, 65537, 458758, 15, 65537, 458759, 15, 65537, 458760, 15, 65537, 458761, 15, 65537, 458762, 15, 65537, 458763, 15, 65537, 458764, 15, 65537 )
script = ExtResource( 4 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.454902, 0.482353, 0.521569, 1 )

[node name="obj_door" type="StaticBody2D" parent="."]
position = Vector2( 0, -320 )
collision_layer = 8
collision_mask = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="spr_dungeon_door" type="Sprite" parent="obj_door"]
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 64, 64, 32, 32 )

[node name="col_door" type="CollisionShape2D" parent="obj_door"]
shape = SubResource( 1 )

[node name="area_door" type="Area2D" parent="obj_door"]
collision_layer = 0

[node name="col_area_door" type="CollisionShape2D" parent="obj_door/area_door"]
shape = SubResource( 2 )

[node name="entity_mc" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 8 )

[node name="area_change_map" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -344 )
destination = "res://maps/chapter5/chapter5-selfdoubt.tscn"

[node name="col_area" type="CollisionShape2D" parent="area_change_map"]
shape = SubResource( 3 )

[node name="node_spawn" type="Node2D" parent="."]

[node name="0" type="Position2D" parent="node_spawn"]
position = Vector2( -96, -256 )

[node name="1" type="Position2D" parent="node_spawn"]
position = Vector2( 0, -256 )

[node name="3" type="Position2D" parent="node_spawn"]
position = Vector2( -96, -128 )

[node name="4" type="Position2D" parent="node_spawn"]
position = Vector2( 96, -128 )

[node name="5" type="Position2D" parent="node_spawn"]
position = Vector2( 96, 0 )

[node name="6" type="Position2D" parent="node_spawn"]
position = Vector2( -96, 0 )

[node name="2" type="Position2D" parent="node_spawn"]
position = Vector2( 96, -256 )

[node name="darkness" type="KinematicBody2D" parent="."]
position = Vector2( 0, -256 )
collision_layer = 2
collision_mask = 8
script = ExtResource( 17 )
__meta__ = {
"_edit_group_": true
}

[node name="node_boss_attacks" parent="darkness" instance=ExtResource( 16 )]

[node name="col_dark_being" type="CollisionShape2D" parent="darkness"]
shape = SubResource( 4 )

[node name="aspr_dark_being" type="AnimatedSprite" parent="darkness"]
frames = SubResource( 5 )
animation = "idle"
frame = 2
playing = true

[node name="node_timers" type="Node" parent="darkness"]

[node name="timer_stage_three" type="Timer" parent="darkness/node_timers"]
wait_time = 1.5
one_shot = true
[connection signal="body_entered" from="obj_door/area_door" to="obj_door" method="_on_area_door_body_entered"]
